<resources>
    <string name="app_name">Brain Blast! By Spencer Bao</string>
    <string name="wizard">Wizard</string>
    <string name="manual_driver">Manual Driver</string>
    <string name="wall_follower">Wall Follower</string>
    <string name="revisit">Revisit</string>
    <string name="explore">Explore</string>
    <string name="energy_consumption">Energy Consumption</string>
    <string name="skill_level">Skill Level</string>
    <string name="skill_level_0">Skill Level: 0</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
    <string name="show_map">Show Map</string>
    <string name="show_solution">Show Solution</string>
    <string name="visible_walls">Visible Walls</string>
    <string name="shortcut">Shortcut</string>
    <string name="energy_consumption_0">Energy Consumption: 0</string>
    <string name="remaining_energy">Remaining Energy</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="victory">VICTORY</string>
    <string name="length_of_shortest_path_1000">Length of Shortest Path: 1000</string>
    <string name="overall_energy_consumption_500">Overall Energy Consumption: 500</string>
    <string name="length_of_path_taken_4000">Length of Path Taken: 4000</string>
    <string name="animat_zoom_in">Zoom In</string>
    <string name="animat_zoom_out">Zoom Out</string>
    <string name="defeat">DEFEAT</string>
    <string name="go2losing">Go2Losing</string>
    <string name="pause">Pause</string>
    <string name="slow">Slow</string>
    <string name="fast">Fast</string>
    <string name="go2winning">Go2Winning</string>
    <string name="forward_sensor">forward sensor</string>
    <string name="left_sensor">Left Sensor</string>
    <string name="right_sensor">Right sensor</string>
    <string name="back_sensor">Back Sensor</string>
    <string name="f">F</string>
    <string name="l">L</string>
    <string name="r">R</string>
    <string name="b">B</string>
    <string name="jimmy">jimmy</string>
    <string name="carl">carl</string>
    <string name="brainblast">brainBlast</string>
</resources>